--- a/scheduleSearch.less
+++ b/scheduleSearch.less
@@ -13,7 +13,7 @@ body {
     width: 1280px;
     height: 720px;
     overflow: hidden;
-    background-image: url(../../package/images/index/beijing.jpg);
+    background-image: url(../../../src/package/images/index/beijing.jpg);
 }
 
 // 初始化 Bootstrap 元素预定义规则
@@ -81,9 +81,6 @@ body {
                 position: absolute;
                 color: #999999;
                 padding-left: 15px;
-            }
-            .pwd{
-            
             }
             .opration{
                 margin-top:60px;
